syntax = "proto3";

package user_v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
//import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/valek177/auth/grpc/pkg/user_v1;user_v1";

service UserV1 {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/user/v1/create_user"
      body: "*"
    };
  }

  rpc GetUser(GetUserRequest) returns (GetUserResponse){
    option (google.api.http) = {
      get: "/user/v1"
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/user/v1"
      body: "*"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1"
    };
  }
}

message UserInfo {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
  Role role = 3;
}

message User {
  int64 id = 1;
  UserInfo user_info = 2;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

enum Role {
  UNKNOWN = 0;
  ADMIN = 1;
  USER = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  Role role = 3;
}

message DeleteUserRequest {
  int64 id = 1;
}
